[gd_scene load_steps=5 format=3 uid="uid://obikk5uydqoo"]

[ext_resource type="Script" path="res://Scripts/chip.gd" id="1_8w0rd"]
[ext_resource type="Texture2D" uid="uid://drbes71qvrk8s" path="res://Aseprite Files/Chips/put_chip.aseprite" id="1_yvlyr"]
[ext_resource type="Script" path="res://Scripts/Effects/put_chip_effect.gd" id="3_diu6x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_so7ne"]
radius = 9.0

[node name="Put Chip" type="Node2D"]
script = ExtResource("1_8w0rd")
chip_name = "Put"
cost = 45

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_so7ne")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yvlyr")

[node name="Effect" type="Node2D" parent="."]
script = ExtResource("3_diu6x")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
